[package]
name = "desktopd"
version = "0.1.0"
authors = ["Karsten Gebbert <k@ioctl.it>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.0"
futures = "0.3"
env_logger = "0.8"
log = "0.4"
async-std = { version = "1.6", features = ["attributes"] }
async-i3ipc = { version = "*", features = ["sway"] }
async-tungstenite = { version = "*", features = ["async-std-runtime"]}
notify-rust = "4.0.0"
skim = "0.9.3"
async-process = "1.0.1"
tabular = "0.1.4"
